2004-07-10  Mason Kidd  <mrkidd@mrkidd.com>

	*data/gamp.glade: Fix resizing the main window
	
2004-06-02  Mason Kidd  <mrkidd@mrkidd.com>

	* data/gamp.glade: Make the main window resizable
	* data/gamp.applications: Add an application-registry file
	
2004-05-26  Mason Kidd  <mrkidd@mrkidd.com>

	* Makefile.am, data/Makefile.am, data/gamp.glade, data/gamp.applications, data/gamp.png,
	data/gamp.desktop.in: Move data files to the data/ directory, add an application-registry
	file.
	
2004-05-15  Mason Kidd  <mrkidd@mrkidd.com>

	* configure.ac: Bump version to 0.4
	
2004-05-15  Mason Kidd  <mrkidd@mrkidd.com>

	* gamp.glade, src/main.c: Remove playlist window, put playlist treeview under GtkExpander
	in main window.  Cleanup the main window.  Fix the menus, add Playlist TLM.
	* src/gui-callbacks.c: Add menu callbacks for Playlist TLM, add code for expander.
	* src/playlist.c: Get metadata for file when adding to playlist.
	
2004-05-02  Mason Kidd  <mrkidd@mrkidd.com>

	* pixmaps/gamp_icon.png: Remove, not needed
	* pixmpas/gamp.png: New icon
	
2004-05-02  Mason Kidd  <mrkidd@mrkidd.com>

	* gamp.glade, src/main.c, src/gui-callbacks.c: Add DnD support for main window and playlist
	treeview
	
2004-04-24  Mason Kidd  <mrkidd@mrkidd.com>

	* gamp.glade, src/main.c, src/main.h, src/gui-callbacks.c: Add a time elapsed display
	
2004-04-24  Mason Kidd  <mrkidd@mrkidd.com>

	* src/GAPPlayer.c, src/GAPPlayer.h: Add a tick callback
	* src/main.c, src/main.h: Enable the tick callback from the GAPPlayer object
	* src/gui-callbacks.c: Simplify the code for the slider, may need functionality added
	
2004-04-15  Mason Kidd  <mrkidd@mrkidd.com>

	* src/GAPPlayer.c,.h: Add duration property and get function
	* src/gui-callbacks.c, gamp.glade: Add code to enable the time slider
	
2004-04-12  Mason Kidd  <mrkidd@mrkidd.com>

	* src/gui-callbacks.c: Fix segfault with clearing playlist when opening file
	* src/GAPPlayer.c: Attempt to support iRadio streams
	