@@ -9,6 +9,9 @@ icon_DATA = gamp.png
 applicationsdir = $(datadir)/application-registry
 applications_DATA = gamp.applications
 
+keys_DATA = gamp.keys
+keysdir = $(datadir)/mime-info
+
 gladedir = $(pkgdatadir)
 glade_DATA = gamp.glade open-location.glade
  
@@ -16,10 +19,14 @@ EXTRA_DIST = \
 	$(desktop_in_files)		\
 	$(desktop_DATA)			\
 	$(applications_DATA)	\
+	$(keys_DATA)			\
 	$(glade_DATA)
 
 
 CLEANFILES = \
-	gamp.desktop
+	$(desktop_DATA)			\
+	*.bak					\
+	*.gladep
+	
 	
 
