@@ -6,4 +6,4 @@ gamp
 	uses_gnomevfs=true
 	expects_uris=false
 	requires_terminal=false
-	mime_type=application/x-ogg,application/ogg,audio/x-mp3,audio/x-scpls,audio/x-mp3,audio/x-mpeg,audio/mpeg,audio/x-mpegurl
+	mime_type=application/x-ogg,application/ogg,audio/x-mp3,audio/x-scpls,audio/x-mpeg,audio/mpeg,audio/x-mpegurl
