@@ -14,7 +14,7 @@
   <property name="default_height">100</property>
   <property name="resizable">True</property>
   <property name="destroy_with_parent">False</property>
-  <property name="icon">gamp.png</property>
+  <property name="icon">../pixmaps/gamp.png</property>
   <property name="decorated">True</property>
   <property name="skip_taskbar_hint">False</property>
   <property name="skip_pager_hint">False</property>
